--- a/libflake/Makefile
+++ b/libflake/Makefile
@@ -3,7 +3,7 @@
 #
 include ../config.mak
 
-CFLAGS=$(OPTFLAGS) -I. -I.. -I$(SRC_PATH)/libaften \
+CFLAGS=$(OPTFLAGS) -I. -I.. -I$(SRC_PATH)/libflake \
        -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_ISOC9X_SOURCE
 
 OBJS= crc.o encode.o lpc.o md5.o optimize.o rice.o vbs.o \
@@ -17,12 +17,10 @@ SRC_DIR = $(SRC_PATH)/lib$(NAME)
 VPATH = $(SRC_DIR)
 
 SRCS := $(OBJS:.o=.c)
-OBJS := $(OBJS)
-STATIC_OBJS := $(OBJS) $(STATIC_OBJS)
 
 all: $(EXTRADEPS) $(LIB)
 
-$(LIB): $(STATIC_OBJS)
+$(LIB): $(OBJS)
 	rm -f $@
 	$(AR) rc $@ $^ $(EXTRAOBJS)
 	$(RANLIB) $@
@@ -36,21 +34,17 @@ depend: $(SRCS)
 dep:	depend
 
 clean:
-	rm -f *.o *.d *~ *.a *.lib *.so *.so.* *.dylib *.dll \
-	      *.lib *.def *.dll.a *.exp
+	rm -f *.o *.d *~ *.a *.lib *.def *.exp
 
 distclean: clean
 	rm -f .depend
 
-INSTLIBTARGETS += install-lib-static
-
 install: install-libs install-headers
 
-install-libs: $(INSTLIBTARGETS)
-
-install-lib-static: $(LIB)
+install-libs: $(LIB)
 	install -d "$(libdir)"
 	install -m 644 $(LIB) "$(libdir)"
+	$(LIB_INSTALL_EXTRA_CMD)
 
 install-headers:
 	install -d "$(incdir)"
@@ -59,10 +53,10 @@ install-headers:
 uninstall: uninstall-libs uninstall-headers
 
 uninstall-libs:
-	-rm -f $(libdir)/$(LIB)
+	-rm -f "$(libdir)/$(LIB)"
 
 uninstall-headers:
-	rm -f $(addprefix $(incdir)/,$(HEADERS))
+	rm -f "$(addprefix $(incdir)/,$(HEADERS))"
 
 ../config.mak:
 	touch ../config.mak
