add support for using libsndfile instead of libpcm_io. since it has not been extensively tested, it is not enabled by default. to use it, configure with the CMake option -DUSE_LIBSNDFILE=yes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@
 # CMake files written by Prakash Punnoor
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
+IF(COMMAND cmake_policy)
+    cmake_policy(SET CMP0003 NEW)
+ENDIF(COMMAND cmake_policy)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules")
 Project(Flake C)
@@ -26,8 +29,10 @@ INCLUDE(${CMAKE_MODULE_PATH}/HeaderTests.cmake)
 INCLUDE(${CMAKE_MODULE_PATH}/FlagsTests.cmake)
 INCLUDE(${CMAKE_MODULE_PATH}/CompilerVisibility.cmake)
 INCLUDE(${CMAKE_MODULE_PATH}/DetectCompiler.cmake)
+INCLUDE(${CMAKE_MODULE_PATH}/Libsndfile.cmake)
 
 OPTION(SHARED "build shared Flake library" OFF)
+OPTION(USE_LIBSNDFILE "use libsndfile library for audio input" OFF)
 
 INCLUDE_DIRECTORIES(${Flake_BINARY_DIR}/)
 INCLUDE_DIRECTORIES(${Flake_SOURCE_DIR}/)
@@ -131,6 +136,11 @@ ENDIF(NOT HAVE_INTTYPES_H)
 CHECK_INCLUDE_FILE_DEFINE(byteswap.h HAVE_BYTESWAP_H)
 CHECK_FUNCTION_DEFINE("#include <string.h>" "strnlen" "(\"help\", 6)" HAVE_STRNLEN)
 
+# check for libsndfile
+IF(USE_LIBSNDFILE)
+CHECK_LIBSNDFILE_DEFINE(HAVE_LIBSNDFILE)
+ENDIF(USE_LIBSNDFILE)
+
 # output SVN version to config.h
 EXECUTE_PROCESS(COMMAND svn info --xml WORKING_DIRECTORY ${Flake_SOURCE_DIR}
 OUTPUT_VARIABLE SVN_INFO ERROR_QUIET)
@@ -160,7 +170,9 @@ SET_TARGET_PROPERTIES(flake_static PROPERTIES COMPILE_FLAGS -DFLAKE_BUILD_LIBRAR
 TARGET_LINK_LIBRARIES(flake_static ${LIBM} ${ADD_LIBS})
 
 # building a separate static lib for the pcm audio decoder
+IF(NOT USE_LIBSNDFILE)
 ADD_LIBRARY(pcm_io STATIC ${LIBPCM_IO_SRCS})
+ENDIF(NOT USE_LIBSNDFILE)
 
 ADD_EXECUTABLE(flake_exe ${FLAKE_SRCS})
 SET_TARGET_PROPERTIES(flake_exe PROPERTIES OUTPUT_NAME flake)
@@ -169,12 +181,22 @@ IF(WIN32)
   # When linking to static lib, dllimport mustn't be used
   SET_TARGET_PROPERTIES(flake_exe PROPERTIES COMPILE_FLAGS -DFLAKE_BUILD_LIBRARY)
 ENDIF(WIN32)
+IF(USE_LIBSNDFILE)
+TARGET_LINK_LIBRARIES(flake_exe flake_static)
+ELSE(USE_LIBSNDFILE)
 TARGET_LINK_LIBRARIES(flake_exe pcm_io flake_static)
+ENDIF(USE_LIBSNDFILE)
 
+IF(NOT USE_LIBSNDFILE)
 ADD_EXECUTABLE(wavinfo util/wavinfo.c)
 TARGET_LINK_LIBRARIES(wavinfo pcm_io)
+ENDIF(NOT USE_LIBSNDFILE)
 
-INSTALL(TARGETS ${INSTALL_TARGETS} flake_exe wavinfo
+SET(INSTALL_TARGETS ${INSTALL_TARGETS} flake_exe)
+IF(NOT USE_LIBSNDFILE)
+SET(INSTALL_TARGETS ${INSTALL_TARGETS} wavinfo)
+ENDIF(NOT USE_LIBSNDFILE)
+INSTALL(TARGETS ${INSTALL_TARGETS}
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
